# ContestObfuscation

./: CMakeLists.txt  LICENSE.txt  README.md  test.cpp  test_ai_resistant.cpp  小杨买书.cpp  小杨买书_obfuscated.cpp
src/advanced_control_flow/: AdvancedControlFlow.cpp  AdvancedControlFlow.h
src/advanced_obfuscation/: AdvancedObfuscation.cpp  AdvancedObfuscation.h
src/advanced_string_encryption/: AdvancedStringEncryption.cpp  AdvancedStringEncryption.h
src/anti_semantic/: AntiSemantic.cpp  AntiSemantic.h
src/code_chunking/: CodeChunker.cpp  CodeChunker.h
src/code_expansion/: CodeExpansion.cpp  CodeExpansion.h
src/constant_encryption/: ConstantEncryptor.cpp  ConstantEncryptor.h
src/constexpr_obfuscation/: ConstexprObfuscation.cpp  ConstexprObfuscation.h
src/control_flow_flattening/: ControlFlowFlattener.cpp  ControlFlowFlattener.h
src/data_flow_obfuscation/: DataFlowObfuscation.cpp  DataFlowObfuscation.h
src/equivalence_replacement/: EquivalenceReplacer.cpp  EquivalenceReplacer.h
src/exception_obfuscation/: ExceptionObfuscator.cpp  ExceptionObfuscator.h
src/fake_control_flow/: FakeControlFlow.cpp  FakeControlFlow.h
src/function_inlining/: FunctionInliner.cpp  FunctionInliner.h
src/function_jump/: FunctionJumpInjector.cpp  FunctionJumpInjector.h
src/function_obfuscation/: FunctionObfuscator.cpp  FunctionObfuscator.h
src/instruction_reordering/: InstructionReordering.cpp  InstructionReordering.h
src/instruction_replacement/: InstructionReplacer.cpp  InstructionReplacer.h
src/irrelevant_code/: IrrelevantCodeInjector.cpp  IrrelevantCodeInjector.h
src/junk_instructions/: JunkInstructions.cpp  JunkInstructions.h
src/loop_transformation/: LoopTransformer.cpp  LoopTransformer.h
src/macro_replacement/: MacroReplacer.cpp  MacroReplacer.h
src/main/: main.cpp
src/memory_obfuscation/: MemoryObfuscation.cpp  MemoryObfuscation.h
src/random_string/: RandomStringGenerator.cpp  RandomStringGenerator.h
src/semantic_analysis/: ExpressionParser.cpp  ExpressionParser.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  SemanticObfuscator.cpp  SemanticObfuscator.h
src/string_encryption/: StringEncryptor.cpp  StringEncryptor.h
src/string_splitting/: StringSplitter.cpp  StringSplitter.h
src/template_metaprogramming/: TemplateMetaprogramming.cpp  TemplateMetaprogramming.h
(+4 files in other folders)
